# BinhNguyen-TakeHomeAssignment

./: .gitignore
Old/Task1/Source/: CMakeLists.txt  main.cpp
Old/Task2-Latest-Linux/: CMakeLists.txt  groundwaterdialog.h  mainwindow.cpp
Old/Task2-Latest-Windows/: CMakeLists.txt
Old/Task2/Source/: mainwindow.cpp
Task1/Source/: CMakeLists.txt  main.cpp
Task2-Latest-Linux/: groundwaterdialog.cpp
Task2-Latest-Windows/: groundwaterdialog.cpp  groundwaterdialogmodel.h  main.cpp  mainwindow.h
Task2/Source/: CMakeLists.txt  groundwaterdialog.h
Task_1/: Task_1.sln  Task_1.vcxproj  WaterPressurePoints.txt  main.cpp
Task_2/: CReusableDialog.cpp  CReusableDialog.h  Converter.cpp  Converter.h  DialogDataModel.h  GroundWaterMethod.h  MethodCollection.h  Task2.aps  Task2.rc  Task_2.cpp  Task_2.h  Task_2.sln  Task_2.vcxproj  Task_2.vcxproj.filters  Task_2Dlg.cpp  Task_2Dlg.h  ThermalMethod.h  resource.h
Task_2/res/: Task2.rc2
